Bug 472844 - Fallback theme shows wrong colors with mismatched Plasma and app color schemes
Summary: Fallback theme shows wrong colors with mismatched Plasma and app color schemes
Status: RESOLVED FIXED
Alias: None
Product: kscreenlocker
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: git-master
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords: qt6
Depends on:
Blocks:
 
Reported: 2023-07-31 15:02 UTC by Nate Graham
Modified: 2023-07-31 16:01 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nate Graham 2023-07-31 15:02:12 UTC
Needs [something]->setProperty("_kirigamiTheme", QStringLiteral("KirigamiPlasmaStyle")); to be set on the engine so that the text and icons use colors from the active Plasma theme rather than the systemwide color scheme.
Comment 1 Marco Martin 2023-07-31 16:01:05 UTC
Git commit 76844c0f253905b402ebb8e6dce688ede79dd3bf by Marco Martin.
Committed on 31/07/2023 at 18:00.
Pushed by mart into branch 'master'.

use the Kirigami Plasma Theme

set the property to load the kirigami plasma theme in the kscreenlocker
greeter, so that Kirigami Theme and Kirigami Units are from plasma
values

M  +1    -0    greeter/greeterapp.cpp

https://invent.kde.org/plasma/kscreenlocker/-/commit/76844c0f253905b402ebb8e6dce688ede79dd3bf