use the Kirigami Plasma Theme

set the property to load the kirigami plasma theme in the kscreenlocker
greeter, so that Kirigami Theme and Kirigami Units are from plasma
values

BUG: 472844